// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown/> <Drop> should render Drop 1`] = `<div />`;

exports[`<Dropdown/> <Drop> should render Drop with bottom position 1`] = `<div />`;

exports[`<Dropdown/> <Drop> should render Drop with top position 1`] = `<div />`;

exports[`<Dropdown/> should render with default props and border left none 1`] = `
<div>
  <div
    class="StyledDropdown__Wrapper-sc-1btfu08-0 jnKrhx"
    height="2.488rem"
  >
    <button
      aria-controls="dropdown1"
      aria-haspopup="true"
      aria-selected="true"
      class="StyledDropdown__Activator-sc-1btfu08-1 igpFBs"
      data-testid="dropdown-activator"
      id="dropdown-activator"
      type="button"
    >
      <span>
        Buscar por...
      </span>
      <img
        alt=""
      />
    </button>
  </div>
</div>
`;

exports[`<Dropdown/> should render with default props and borders 1`] = `
<div>
  <div
    class="StyledDropdown__Wrapper-sc-1btfu08-0 jnKrhx"
    height="2.488rem"
  >
    <button
      aria-controls="dropdown1"
      aria-haspopup="true"
      aria-selected="true"
      class="StyledDropdown__Activator-sc-1btfu08-1 haUpWN"
      data-testid="dropdown-activator"
      id="dropdown-activator"
      type="button"
    >
      <span>
        Buscar por...
      </span>
      <img
        alt=""
      />
    </button>
  </div>
</div>
`;
